# streamchunk

./: .gitignore  README.md  pyproject.toml
streamchunk/: __init__.py  chunker.py  controller.py  metadata.py  metrics.py  parallel.py  partitioner.py  stats.py
streamchunk/sources/: __init__.py  api.py  base.py  database.py  file.py  generator.py  kafka.py
tests/: test_chunker.py  test_controller.py  test_parallel.py  test_partitioner.py  test_sources.py  test_weighted_partitioner.py
