[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamchunk"
version = "2.0.0"
description = "Adaptive data stream chunker with CPU-aware parallel processing for real-time ETL pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Muhammad Sufiyan Baig", email = "send.sufiyan@gmail.com" }
]
keywords = [
    "etl", "streaming", "chunking", "pipeline", "data-processing",
    "parallel", "multiprocessing", "threading", "adaptive", "pid"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed"
]
dependencies = [
    "psutil>=5.9",
    "numpy>=1.21",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
pandas   = ["pandas>=1.3"]
kafka    = ["kafka-python>=2.0"]
database = ["sqlalchemy>=1.4"]
metrics  = ["prometheus-client>=0.14"]
async    = ["aiofiles>=0.8"]
all      = [
    "pandas>=1.3",
    "kafka-python>=2.0",
    "sqlalchemy>=1.4",
    "prometheus-client>=0.14",
    "aiofiles>=0.8"
]

[project.urls]
Homepage      = "https://github.com/muhammadsufiyanbaig/streamchunk"
Repository    = "https://github.com/muhammadsufiyanbaig/streamchunk"
Issues        = "https://github.com/muhammadsufiyanbaig/streamchunk/issues"
Changelog     = "https://github.com/muhammadsufiyanbaig/streamchunk#changelog"

[tool.setuptools.packages.find]
where = ["."]
include = ["streamchunk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
